added Products and suppliers and tested them
